# tetra

./: .coveragerc  .gitignore  .readthedocs.yaml  CHANGELOG.md  LICENSE  MANIFEST.in  Makefile  README.md  dev-requirements.txt  mkdocs.yml  package.json  pyproject.toml  setup.py
.github/ISSUE_TEMPLATE/: config.yml  issue.md
.github/workflows/: django.yml
demosite/: .env.example  Makefile  README.md  manage.py  package-lock.json  package.json
demosite/demo/: admin.py  components.py  models.py  movies.py  tasks.py  urls.py  utils.py  views.py
demosite/demo/components/: __init__.py  default.py  examples.py
demosite/demo/migrations/: 0001_initial.py  0002_todo_sessionid_alter_todo_added.py  0003_rename_sessionid_todo_session_key.py  0004_breakingnews_alter_todo_options.py
demosite/demo/templates/: base.html  base_examples.html  counter.index.html  counter.py  counter_components.txt  counter_index.txt  index.html  info_card.index.html  info_card.py  news_ticker.index.html  news_ticker.py  reactive_components.txt  reactive_search.html  reactive_search.py  todo_components.txt  todo_index.txt  todo_item  todo_list  todo_models.txt
demosite/demosite/: asgi.py  settings.py  urls.py  wsgi.py
demosite/docs/: apps.py  urls.py  views.py
docs/: Makefile  attribute-tag.md  basic-components.md  changelog.md  component-inheritance.md  component-libraries.md  component-life-cycle.md  component-tag.md  component-views.md  components.md  contribute.md  data-life-cycle.md  events.md  files.md  form-components.md  form_components.md  group-registry.md  helpers.md  if-else-filters.md  include-js-css.md  index.md  install.md  introduction.md  magic-static.md  messages.md  offline-queue.md  online-status.md  protocol_specification.md  reactive-components.md  reactive-models.md  request.md  requirements.txt  routing.md  settings.md  slots.md  state-security.md  structure.yaml  testing.md  tutorial.md
docs/development/: contribute.md  data-attributes.md  protocol_specification.md
docs/flowcharts/: click_behaviour.md
docs/source/: attribute-tag.md  changelog.md  component-libraries.md  component-tag.md  components.md  conf.py  if-else-filters.md  include-js-css.md  index.md  install.md  introduction.md  magic-static.md  state-security.md
scripts/: build_js.sh  update_esbuild.py
src/tetra/: __init__.py  apps.py  build.py  checks.py  component_register.py  conf.py  constants.py  consumers.py  dispatcher.py  exceptions.py  globals.py  helpers.py  library.py  middleware.py  models.py  registry.py  router.py  routing.py  state.py  templates.py  types.py  urls.py  utils.py  views.py
tests/: asgi.py  conftest.py  package-lock.json  package.json  test_autokey_behavior.py  test_component_attributes.py  test_component_attrs.py  test_component_blocks.py  test_component_context.py  test_component_imports.py  test_component_registration.py  test_component_tags.py  test_file_upload_security.py  test_filters.py  test_form_component.py  test_form_pydantic_validation.py  test_group_removal.py  test_import_without_channels.py  test_library.py  test_middleware.py  test_public_decorator.py  test_pydantic_validation.py  test_rapid_delete.py  test_renderer_abstraction.py  test_router.py  test_signals_dispatch.py  test_templates.py  test_utils.py  urls.py  utils.py
tests/another_app/: apps.py
tests/components/: test_attributes.py  test_attrs.py  test_basic_component_script.py  test_form_component.py  test_public_attr.py  test_public_decorator.py  test_pydantic_validation.py  test_resource_discovery_order.py
tests/e2e/: test_content_change.py  test_loading_indicator.py  test_offline.py  test_offline_queue.py  test_redirect.py  test_upload.py
tests/integration/: test_basic_component_build.py  test_import_without_channels.py  test_middleware.py
tests/interactive/: test_component_content_change.py  test_form_component.py  test_upload.py
tests/main/: apps.py  components.py  helpers.py  models.py  urls.py  views.py
tests/models/: test_group_removal.py  test_reactivemodel.py
tests/rendering/: test_component_blocks.py  test_component_context.py  test_component_imports.py  test_component_tags.py  test_context_not_pickled.py  test_livevar.py  test_renderer_abstraction.py  test_templates.py
tests/routing/: test_router.py
tests/security/: test_file_upload_security.py
tests/state/: test_fieldfile_state.py  test_model_pk_validation.py  test_stale_state.py
tests/test_basic_components/: test_attributes.py  test_attrs.py  test_registration.py
tests/test_component/: test_attributes.py  test_interdependent_components.py
tests/test_form_component/: test_form_component.py
tests/test_interactive/: test_concurrent_loading.py  test_conditional.py  test_content_change.py  test_download.py  test_loading_indicator.py  test_nested_counter.py  test_offline.py  test_redirect.py  test_upload.py
tests/test_others/: test_build_incremental.py  test_library.py  test_middleware.py  test_public_decorator.py  test_reactivemodel.py  test_request_id.py  test_utils.py
tests/test_rendering/: test_component_blocks.py  test_component_context.py  test_component_imports.py  test_component_tags.py  test_livevar.py
tests/test_store/: test_store.py
tests/test_utils/: __init__.py
tests/test_ws/: test_custom_user_consumer.py  test_reactivemodel_websocket.py  test_tetra_consumer.py
tests/ui/: test_component_content_change.py  test_component_return.py  test_public_download.py
tests/utils/: base_utils.py  test_filters.py  test_json.py  test_request_id.py  test_single_root.py
tests/ws/: test_reactivemodel_websocket.py  test_tetra_consumer.py
tetra/: __init__.py  apps.py  build.py  build_js.sh  component_register.py  consumers.py  default_settings.py  exceptions.py  globals.py  library.py  middleware.py  routing.py  state.py  templates.py  types.py  urls.py  utils.py  views.py
tetra/components/: __init__.py  base.py  callbacks.py  reactive.py
tetra/js/: tetra.core.js
tetra/loaders/: components_directories.py
tetra/templates/: lib_scripts.html  script.js
tetra/templatetags/: tetra.py
(+132 files in other folders)
