[build-system]
requires = ["setuptools>=77.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tetra"
dynamic = ["version"]
description = "Full stack component framework for Django using Alpine.js"
authors = [
    { name = "Sam Willis", email="sam.willis@gmail.com"},
    { name = "Christian González", email = "christian.gonzalez@nerdocs.at" }
]
license = "MIT"
license-files = [
    "LICENSE"
]
readme = "README.md"
keywords = ["python", "django", "framework", "components"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "cryptography>=37.0.1",
    "Django>=3.2.0",
    "python-dateutil>=2.8.2",
    "sourcetypes>=0.0.4",
]
requires-python = ">=3.8"

[project.urls]
Homepage = "https://tetraframework.com"
Documentation = "https://tetra.readthedocs.io"
Repository = "https://github.com/tetra-framework/tetra"

[project.optional-dependencies]
dev = [
    "build",
    "twine>=6.1",
    "packaging>=24.2",
    "pkginfo>=1.12.1.2",
    "pytest",
    "pytest-django",
    "pre-commit",
    "black",
    "python-dateutil>=2.8.2",
    "beautifulsoup4",
    "tetra[demo]", # include all the demo packages too
    "tetra[doc]",
    "selenium"
]
demo = [
    "PyYAML>=6.0",
    "markdown>=3.3.7",
    "django-environ",
    "PyYAML>=6.0",
    "markdown>=3.3.7",
    "channels[daphne]",
    "channels_redis",
]
doc = [
    "mkdocs",
    "mkdocs-material",
    "pymdown-extensions",
    "pygments",
    "mkdocstrings[python]",
    "mkdocs-mermaid2-plugin",
    "mkdocs-panzoom-plugin"
]


[tool.setuptools.dynamic]
version = {attr = "tetra.__version__"}

[tool.setuptools.packages.find]
exclude = ["docs", "tests", "demosite"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--nomigrations"
testpaths =[
    "tests"
]