[build-system]
requires = ["setuptools>=77.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tetra"
dynamic = ["version"]
description = "Full stack component framework for Django using Alpine.js"
authors = [
    { name = "Sam Willis", email="sam.willis@gmail.com"},
    { name = "Christian González", email = "christian.gonzalez@nerdocs.at" }
]
license = "MIT"
license-files = [
    "LICENSE"
]
readme = "README.md"
keywords = ["python", "django", "framework", "components"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Framework :: Django",
    "Framework :: Django :: 5",
    "Operating System :: OS Independent",
    "Topic :: Software Development",
]
dependencies = [
    "cryptography>=37.0.1",
    "Django>=3.2.0",
    "python-dateutil>=2.8.2",
    "sourcetypes>=0.0.4",
]
requires-python = ">=3.10"

[project.urls]
Homepage = "https://tetraframework.com"
Documentation = "https://tetra.readthedocs.io"
Repository = "https://github.com/tetra-framework/tetra"

[project.optional-dependencies]
dev = [
    "build~=1.3.0",
    "twine>=6.2",
    "packaging>=25.0",
    "pkginfo>=1.12",
    "pytest~=9.0",
    "pytest-django~=4.11",
    "pytest-cov~=7.0",
    "pre-commit",
    "black>=25.12",
    "python-dateutil~=2.8",
    "beautifulsoup4~=4.14",
    "tetra[demo]", # include all the demo packages too
    "tetra[doc]",
    "pytest-playwright"
]
demo = [
    "PyYAML~=6.0",
    "markdown~=3.3",
    "django-environ~=0.12",
    "PyYAML>=6.0",
    "markdown~=3.3",
    "channels[daphne]~=4.2",
    "channels_redis~=4.3",
]
doc = [
    "mkdocs~=1.6",
    "mkdocs-material~=9.7",
    "pymdown-extensions~=10.19",
    "pygments~=2.19",
    "mkdocstrings[python]",
    "mkdocs-mermaid2-plugin~=1.2",
    "mkdocs-panzoom-plugin~=0.4"
]


[tool.setuptools.dynamic]
version = {attr = "tetra.__version__"}

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["docs", "tests", "demosite"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--nomigrations"
testpaths = [
    "tests"
]
pythonpath = [
  "src"
]